will/will-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: will-service
spec:
  selector:
    app: will
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
