will/will-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: will.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: will-service
              port: 
                number: 80
  defaultBackend:
    service:
      name: will-service
      port:
        number: 80
